[package]
name = "iced_highlighter"
description = "A syntax highlighter for iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
iced_core.workspace = true

two-face.workspace = true

[features]
# Explictly set regex engine to onig
syntect-onig = ["two-face/syntect-onig"]
# Explictly set regex engine to fancy
syntect-fancy = ["two-face/syntect-fancy"]
# Explictly set regex engine to default-fancy
syntect-default-fancy = ["two-face/syntect-default-fancy"]
# Explicitly set regex engine to default-onig
syntect-default-onig = ["two-face/syntect-default-onig"]